--- a/_config.yml
+++ b/_config.yml
@@ -106,9 +106,9 @@ analytics:
 author:
   name             : "Andrew Zhang"
   avatar           : "/assets/images/avatar.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  bio              : "Electrical and Computer Engineering Master's student @UW-Seattle"
+  location         : "Seattle, US"
+  email            : "uwandrew72@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
