--- a/_config.yml
+++ b/_config.yml
@@ -108,17 +108,18 @@ author:
   avatar           : "/assets/images/avatar.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Electrical and Computer Engineering Master's student @UW-Seattle"
   location         : "Seattle, US"
-  email            : "uwandrew72@gmail.com"
+  email            : # "uwandrew72@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:uwandrew72@gmail.com"
+      url: "mailto:uwandrew72@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://uwandrew72.github.io"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
+    - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/zhaoruiz/"
     - label: "Facebook"
