--- a/_config.yml
+++ b/_config.yml
@@ -282,6 +282,15 @@ compress_html:
 
 # Defaults
 defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
+defaults:
   # _posts
   - scope:
       path: ""
@@ -289,7 +298,3 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: # true
-      comments: # true
-      share: # true
-      related: # true
