--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "Projects"
     url: /projects
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "Educations"
+    url: /educations
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
