--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Projects"
     url: /#Projects
   - title: "Educations"
-    url: /#Educations
+    url: /#Education
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
