--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
-  - title: "Projects"
-    url: /#Projects
-  - title: "Educations"
-    url: /#Education
+  # - title: "Projects"
+  #   url: /#Projects
+  # - title: "Educations"
+  #   url: /#Education
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
