--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  # - title: "Projects"
-  #   url: /#Projects
+  - title: "Projects"
+    url: /projects
   # - title: "Educations"
   #   url: /#Education
   # - title: "Sample Posts"
