--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Projects"
     url: /projects
   - title: "Blogs"
-    url: /blog.html
+    url: /blog
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
