--- a/_config.yml
+++ b/_config.yml
@@ -295,5 +295,5 @@ defaults:
       author_profile: true
       read_time: true
       comments: # true
-      share: true
-      related: true
+      share: # true
+      related: # true
