--- a/_config.yml
+++ b/_config.yml
@@ -293,7 +293,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: # true
       comments: # true
       share: # true
       related: # true
